--- a/Subsystem/views/layouts/main.handlebars
+++ b/Subsystem/views/layouts/main.handlebars
@@ -1,1 +1,12 @@
-<h1>Giao diện hệ thống phụ</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hệ thống phụ </title>
+</head>
+<body>
+    <h1>Thanh toán</h1>
+    
+</body>
+</html>
