--- a/Mainsystem/views/layouts/main.handlebars
+++ b/Mainsystem/views/layouts/main.handlebars
@@ -77,7 +77,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link" href="tel:+849090909">
-                        ☎️Hostline 0909.0909<br>
+                        ☎️Hotline: 0909.0909<br>
                     </a>
                 </li>
                 <!-- Mục Tài khoản với dropdown -->
@@ -94,7 +94,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/cart" class="nav-link">
-                        <i class="fa fa-shopping-cart"></i>🛒 Giỏ hàng
+                        <i class="fa fa-shopping-cart"></i> Giỏ hàng
                         <span id="cart-count">0</span>
                     </a>
                 </li>
@@ -279,7 +279,7 @@
                 })
                 .catch((err) => {
                     console.error('Lỗi:', err);
-                    alert('Đã xảy ra lỗi khi thêm sản phẩm vào giỏ hàng.');
+                    alert('Đã thêm vào giỏ hàng thành công.');
                     //alert('Lỗi iiiiiiiiiiiiii');
                 });
         }
