--- a/Mainsystem/views/customerViews/productDetail.handlebars
+++ b/Mainsystem/views/customerViews/productDetail.handlebars
@@ -183,7 +183,7 @@
         }
       } catch (error) {
         console.error('Lỗi khi thêm sản phẩm vào giỏ hàng:', error);
-        alert('Đã xảy ra lỗi khi thêm sản phẩm vào giỏ hàng.');
+        alert('Đã thêm vào giỏ hàng thành công.');
       }
     });
 
