--- a/Mainsystem/views/layouts/main.handlebars
+++ b/Mainsystem/views/layouts/main.handlebars
@@ -43,8 +43,8 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light w-100">
-        <a class="navbar-brand bg-primary text-white" href="/{{role}}"
-            style="margin-left:10px; padding: 10px 15px; border-radius: 5px;">🏠︎Home</a>
+        <a class="navbar-brand  text-white" href="/{{role}}"
+            style="margin-left:10px; padding: 10px 15px; border-radius: 5px;">🏠︎ Home</a>
         {{#if (eq role 'admin')}}
         <div class="navbar-nav">
             <ul class="nav">
