--- a/Mainsystem/views/layouts/main.handlebars
+++ b/Mainsystem/views/layouts/main.handlebars
@@ -87,6 +87,7 @@
                         <li><a class="dropdown-item" href="/register">Đăng ký</a></li>
                         <li><a class="dropdown-item" href="/login">Đăng nhập</a></li>
                         <li><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
+                        <li><a class="dropdown-item">Số dư : {{money}} VND</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
